# stadtomat

./: .gitignore  LICENSE
.github/workflows/: build-image.yaml  test-ui.yaml
scanner-pi/: README.md  requirements.txt  som-scanner.service
scanner-pi/src/: export.py  gphoto2.py  model.py  scanner.py  take_picture.py  upload_csv.py
stadtomat-scan/: pyproject.toml
stadtomat-scan/stadtomat_scan/: app.py
stadtomat-scan/stadtomat_scan/cam/: gphoto2.py  gphoto2_async.py
stadtomat-scan/stadtomat_scan/model/: spell_number.py
stadtomat-scan/stadtomat_scan/pi_files/: button.py  full-scanner.py  scanner.py
stadtomat-scan/stadtomat_scan/qr/: scan.py
stadtomat-scan/stadtomat_scan/templates/: home.html
vote-ui/: .gitignore  Dockerfile  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.app.json  vite.config.ts
vote-ui/src/: App.vue  main.ts  router.ts  state.ts  style.css
vote-ui/src/components/: AdminList.vue  Categories.vue  DataTable.vue  EditPiece.vue  ListItems.vue  NewItemForm.vue
vote-ui/src/lib/: utils.ts
vote-ui/src/pages/: AddItem.vue  Admin.vue  AllItems.vue  Home.vue  Votes.vue
vote-ui/src/services/: loginService.ts  pieceService.ts  supabase.ts
vote-ui/src/types/: category.ts  index.ts  piece.ts  tag.ts
